--- a/school website/style.css
+++ b/school website/style.css
@@ -165,3 +165,21 @@ nav a{
     margin-bottom: 20px;
     text-align: center;
 }
+
+.Testimonials{
+    width: 30.5%;
+    float: left;
+    margin-right: 2.5%;
+}
+
+.Testimonials-text{
+    background: #46b7c1;
+    padding: 20px;
+    line-height: 35px;
+    border-radius: 10px;
+    color: white;
+    font-size: 18px;
+    text-align: center;
+    text-align: justify;
+}
+
